--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "node": "12.x.x"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "up": "./scripts/up-db.sh",
+    "down": "docker-compose down"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.66",
@@ -17,7 +18,8 @@
     "sequelize-cli": "^6.2.0",
     "serverless-offline": "^6.8.0",
     "serverless-plugin-typescript": "^1.1.9",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "wait-on": "^5.2.0"
   },
   "dependencies": {
     "pg": "^8.5.1",
