--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.66",
+    "@typescript-eslint/eslint-plugin": "^4.10.0",
+    "@typescript-eslint/parser": "^4.10.0",
     "aws-lambda": "^1.0.6",
     "eslint": "^7.15.0",
     "prettier": "^2.2.1",
