--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "runes-serverless",
+  "name": "runesapi",
   "author": "Arbor Software Solutions, LLC",
   "description": "API for getting data on and interacting with various runic systems",
   "version": "0.1.0",
@@ -7,7 +7,8 @@
     "node": "12.x.x"
   },
   "scripts": {
-    "up": "./scripts/up-db.sh",
+    "up": "./scripts/up-db.sh && serverless offline start --useChildProcesses",
+    "start": "npm run up",
     "down": "docker-compose down"
   },
   "devDependencies": {
