--- a/package.json
+++ b/package.json
@@ -9,7 +9,14 @@
   "scripts": {
     "up": "./scripts/up-db.sh && serverless offline start --useChildProcesses",
     "start": "npm run up",
-    "down": "docker-compose down"
+    "down": "docker-compose down",
+    "test": "jest test/unit",
+    "test:integration": "jest test/integration"
+  },
+  "dependencies": {
+    "pg": "^8.5.1",
+    "pg-hstore": "^2.3.3",
+    "sequelize": "^6.3.5"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.66",
@@ -17,16 +24,13 @@
     "@typescript-eslint/parser": "^4.10.0",
     "aws-lambda": "^1.0.6",
     "eslint": "^7.15.0",
+    "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "sequelize-cli": "^6.2.0",
     "serverless-offline": "^6.8.0",
     "serverless-plugin-typescript": "^1.1.9",
+    "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
     "wait-on": "^5.2.0"
-  },
-  "dependencies": {
-    "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
   }
 }
