--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "start": "npm run up",
     "down": "docker-compose down",
     "test": "jest --selectProjects unit",
-    "test:integration": "jest --selectProjects integration"
+    "test:integration": "jest --selectProjects integration --detectOpenHandles"
   },
   "dependencies": {
     "pg": "^8.5.1",
@@ -24,6 +24,7 @@
     "@typescript-eslint/parser": "^4.10.0",
     "aws-lambda": "^1.0.6",
     "eslint": "^7.15.0",
+    "execa": "^5.0.0",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "sequelize-cli": "^6.2.0",
