--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "test:integration": "jest --selectProjects integration --detectOpenHandles"
   },
   "dependencies": {
+    "ajv": "^7.0.3",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
     "sequelize": "^6.3.5"
@@ -32,6 +33,6 @@
     "serverless-plugin-typescript": "^1.1.9",
     "ts-jest": "^26.4.4",
     "typescript": "^4.1.3",
-    "wait-on": "^5.2.0"
+    "wait-on": "^5.2.1"
   }
 }
