--- a/package.json
+++ b/package.json
@@ -17,13 +17,15 @@
     "ajv": "^7.0.3",
     "pg": "^8.5.1",
     "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5"
+    "sequelize": "^6.3.5",
+    "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.66",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "aws-lambda": "^1.0.6",
+    "dotenv": "^8.2.0",
     "eslint": "^7.15.0",
     "execa": "^5.0.0",
     "jest": "^26.6.3",
