Add elder futhark runes to vs workspace dictionary

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,28 @@
 {
   "cSpell.words": [
     "aett",
+    "algiz",
     "ansuz",
-    "runesapi"
+    "berkano",
+    "dagaz",
+    "ehwaz",
+    "eihwaz",
+    "gebo",
+    "hagalaz",
+    "ingwaz",
+    "jera",
+    "kenaz",
+    "laguz",
+    "mannaz",
+    "naudhiz",
+    "othala",
+    "perthro",
+    "raidho",
+    "runesapi",
+    "sowilo",
+    "thurisaz",
+    "tiwaz",
+    "uruz",
+    "wunjo"
   ]
 }
