--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "start": "npm run up",
     "down": "docker-compose down",
     "test": "jest --selectProjects unit",
-    "test:integration": "jest --selectProjects integration --detectOpenHandles"
+    "test:integration": "jest --selectProjects integration --detectOpenHandles",
+    "db:create:entity": "ts-node ./node_modules/.bin/typeorm entity:create -d src/db/entity",
+    "db:create:migration": "ts-node ./node_modules/.bin/typeorm migration:create -d src/db/migration",
+    "db:generate:migration": "ts-node ./node_modules/.bin/typeorm migration:generate -d src/db/migration",
+    "db:run:migration": "ts-node ./node_modules/.bin/typeorm migration:run",
+    "db:revert:migration": "ts-node ./node_modules/.bin/typeorm migration:revert"
   },
   "dependencies": {
     "ajv": "^7.0.3",
     "pg": "^8.5.1",
-    "pg-hstore": "^2.3.3",
-    "sequelize": "^6.3.5",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
@@ -34,6 +37,7 @@
     "serverless-offline": "^6.8.0",
     "serverless-plugin-typescript": "^1.1.9",
     "ts-jest": "^26.4.4",
+    "ts-node": "^9.1.1",
     "typescript": "^4.1.3",
     "wait-on": "^5.2.1"
   }
