--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,6 +3,7 @@
     "lib": ["ES2020"],
     "target": "ES5",
     "noImplicitAny": true,
+    "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "removeComments": true,
     "outDir": "./.dist",
