Add find to runes functions, not working yet

--- a/serverless.yml
+++ b/serverless.yml
@@ -24,3 +24,9 @@ functions:
       - http:
         method: POST
         cors: true
+  find:
+    handler: src/handler.find
+    events:
+      - http:
+        method: GET
+        cors: true
