--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "up": "./scripts/up.sh",
-    "start": "npm run up",
+    "start": "npm run up && sls offline start --useChildProcesses",
     "down": "docker-compose down && ./scripts/down-detached.sh",
     "test": "jest --selectProjects unit",
     "pretest:integration": "./scripts/up-detached.sh && wait-on tcp:3002",
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "ajv": "^7.0.3",
+    "lodash.iserror": "^3.1.1",
     "pg": "^8.5.1",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.66",
+    "@types/lodash.iserror": "^3.1.6",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "aws-lambda": "^1.0.6",
