--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 TYPEORM_URL=postgres://runesapi:runesapi@localhost/runes
 TYPEORM_SYNCHRONIZE=false
-TYPEORM_LOGGING=false
+TYPEORM_LOGGING=true
 TYPEORM_ENTITIES=src/db/entity/**/*.ts
 TYPEORM_MIGRATIONS=src/db/migration/**/*.ts
 TYPEORM_SUBSCRIBERS=src/db/subscriber/**/*.ts
