--- a/package.json
+++ b/package.json
@@ -24,13 +24,13 @@
   },
   "dependencies": {
     "ajv": "^7.0.3",
-    "lodash.iserror": "^3.1.1",
+    "lodash": "^4.17.20",
     "pg": "^8.5.1",
     "typeorm": "^0.2.29"
   },
   "devDependencies": {
     "@types/aws-lambda": "^8.10.66",
-    "@types/lodash.iserror": "^3.1.6",
+    "@types/lodash": "^4.14.167",
     "@typescript-eslint/eslint-plugin": "^4.10.0",
     "@typescript-eslint/parser": "^4.10.0",
     "aws-lambda": "^1.0.6",
