WIP - update function

--- a/serverless.yml
+++ b/serverless.yml
@@ -33,6 +33,13 @@ functions:
           path: /find
           method: GET
           cors: true
+  update:
+    handler: src/handler.update
+    events:
+      - http:
+          path: /update
+          method: PUT
+          cors: true
   remove:
     handler: src/handler.remove
     events:
