--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,3 +6,7 @@ updates:
       prefix: 'chore: '
     schedule:
       interval: 'daily'
+    default_labels:
+      - 'dependencies'
+      - 'dependabot'
+      - 'automerge'
