update dependabot label config

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -6,7 +6,7 @@ updates:
       prefix: 'chore: '
     schedule:
       interval: 'daily'
-    default_labels:
+    labels:
       - 'dependencies'
       - 'dependabot'
       - 'automerge'
