--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,8 +4,10 @@
     "aettir",
     "algiz",
     "ansuz",
+    "automerge",
     "berkano",
     "dagaz",
+    "dependabot",
     "ehwaz",
     "eihwaz",
     "gebo",
