--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -6,6 +6,7 @@ jobs:
   auto-approve:
     runs-on: ubuntu-latest
     steps:
+      - run: echo "${{ github.actor }}"
       - uses: hmarr/auto-approve-action@v2.0.0
         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
