--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -13,6 +13,11 @@ jobs:
         # if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
           github-token: '${{ secrets.ARBOR_BOT_PAT }}'
+      - run: echo 'foo'
+      - run: echo '${{ github.event.review.state }}'
+      - run: echo '${{ github.event.review }}'
+      - run: echo '${{ github.actor }}'
+      - run: echo 'bar'
       - uses: reitermarkus/automerge@v1
         if: github.event.review.state == 'approved' || !github.event.review
         with:
