--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -5,8 +5,8 @@ on:
   pull_request_target:
 
 jobs:
-  auto-approve-and-merge:
-    runs-on: ubuntu-latest
+  auto-approve:
+    runs-on: ubuntu-20.04
     steps:
       - uses: hmarr/auto-approve-action@v2.0.0
         # Yeah, lets not leave it this way
@@ -18,6 +18,10 @@ jobs:
       - run: echo '${{ github.event.review }}'
       - run: echo '${{ github.actor }}'
       - run: echo 'bar'
+  auto-merge:
+    runs-on: ubuntu-20.04
+    needs: auto-approve
+    steps:
       - uses: reitermarkus/automerge@v1
         if: github.event.review.state == 'approved' || !github.event.review
         with:
