--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -1,27 +1,10 @@
-name: auto-approve-and-merge
+name: auto-merge
 
 on:
   pull_request_review:
-  pull_request_target:
+    types: ['submitted']
 
 jobs:
-  auto-approve:
-    runs-on: ubuntu-20.04
-    steps:
-      - uses: hmarr/auto-approve-action@v2.0.0
-        # Yeah, lets not leave it this way
-        # if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
-        with:
-          github-token: '${{ secrets.ARBOR_BOT_PAT }}'
-  test:
-    runs-on: ubuntu-20.04
-    needs: auto-approve
-    steps:
-      - run: echo 'foo'
-      - run: echo '${{ github.event.review.state }}'
-      - run: echo '${{ github.event.review }}'
-      - run: echo '${{ github.actor }}'
-      - run: echo 'bar'
   auto-merge:
     runs-on: ubuntu-20.04
     needs: test
