--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -2,7 +2,13 @@ name: auto-approve
 
 on:
   pull_request_target:
-    types: ['labeled', 'opened', 'reopened', 'ready_for_review']
+    types:
+      - labeled
+      - opened
+      - reopened
+      - ready_for_review
+      - synchronize
+      - edited
 
 jobs:
   auto-approve:
