--- a/.github/workflows/auto-approve.yml
+++ b/.github/workflows/auto-approve.yml
@@ -17,7 +17,6 @@ jobs:
       - run: echo '${{ github.actor }}'
       - run: echo '${{ github.actor == 'dependabot[bot]' }}'
       - uses: hmarr/auto-approve-action@v2.0.0
-        # Yeah, lets not leave it this way
-        # if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
           github-token: '${{ secrets.ARBOR_BOT_PAT }}'
