--- a/.github/workflows/labels.yml
+++ b/.github/workflows/labels.yml
@@ -7,6 +7,9 @@ jobs:
   pr-labeler:
     runs-on: ubuntu-latest
     steps:
+      - run: \
+          echo '${{ github_event_path }}'
+          echo 'cat ${{ github_event_path }}'
       - uses: TimonVS/pr-labeler-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
