--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -1,6 +1,7 @@
 name: Pull Request
 on:
   pull_request:
+    types: ['review_requested', 'opened', 'synchronize', 'reopened']
 
 defaults:
   run:
@@ -17,31 +18,30 @@ jobs:
 
   pr-labeler:
     runs-on: ubuntu-20.04
+    needs: setup
     name: Label Pull Request
-    #  github.event_name == 'pull_request'
     if: ${{ github.event.action == 'opened' || github.event.action == 'synchronize' || github.event.action == 'reopened' }}
     steps:
-      - run: \
       - uses: TimonVS/pr-labeler-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
   request-review:
     runs-on: ubuntu-20.04
-    needs: ['pr-labeler']
+    needs: pr-labeler
     name: Request Reviews
     steps:
-      - name: 'Trigger CI Bot'
+      - name: Trigger CI Bot Review
         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         uses: kunihiko-t/review-request-action@v0.1.3
         with:
           repo-token: ${{ secrets.TOKEN }}
-          reviewers: 'arbor-ci'
+          reviewers: arbor-ci
 
   auto-approve:
     runs-on: ubuntu-20.04
     if: ${{ github.event.action == 'review_requested' }}
-    # if: github.event.label.name == 'automerge'
-    name: Trigger Magic Approvals
+    name: Trigger Bot Approval
+    needs: setup
     steps:
       - uses: hmarr/auto-approve-action@v2.0.0
         if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
