--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -25,23 +25,12 @@ jobs:
       - uses: TimonVS/pr-labeler-action@v3
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-  request-review:
-    runs-on: ubuntu-20.04
-    needs: pr-labeler
-    name: Request Reviews
-    steps:
-      - name: Trigger CI Bot Review
-        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
-        uses: kunihiko-t/review-request-action@v0.1.3
-        with:
-          repo-token: ${{ secrets.GITHUB_TOKEN }}
-          reviewers: arbor-ci
 
   auto-approve:
     runs-on: ubuntu-20.04
     if: ${{ github.event.action == 'review_requested' }}
     name: Trigger Bot Approval
-    needs: setup
+    needs: request-review
     steps:
       - uses: hmarr/auto-approve-action@v2.0.0
         # if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
