--- a/.github/workflows/pull-request.yml
+++ b/.github/workflows/pull-request.yml
@@ -32,6 +32,6 @@ jobs:
     needs: pr-labeler
     steps:
       - uses: hmarr/auto-approve-action@v2.0.0
-        # if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
+        if: github.actor == 'dependabot[bot]' || github.actor == 'dependabot-preview[bot]'
         with:
           github-token: '${{ secrets.ARBOR_BOT_PAT }}'
