--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -2,16 +2,12 @@ name: auto-merge
 
 on:
   pull_request_review:
-    types:
-      - submitted
+    types: ['submitted']
 
 jobs:
   auto-merge:
     runs-on: ubuntu-20.04
     steps:
-      - run: \
-          echo '${{ github_event_path }}'
-          echo 'cat ${{ github_event_path }}'
       - name: automerge
         if: github.event.review.state == 'approved'
         uses: 'pascalgn/automerge-action@v0.13.0'
