--- a/.github/workflows/auto-merge.yml
+++ b/.github/workflows/auto-merge.yml
@@ -13,3 +13,5 @@ jobs:
         uses: 'pascalgn/automerge-action@v0.13.0'
         env:
           GITHUB_TOKEN: '${{ secrets.ARBOR_BOT_PAT }}'
+          MERGE_METHOD: squash
+          MERGE_COMMIT_MESSAGE: pull-request-title
