--- a/package.json
+++ b/package.json
@@ -8,10 +8,11 @@
   },
   "scripts": {
     "up": "./scripts/up.sh",
-    "start": "npm run up && sls offline start --useChildProcesses",
-    "down": "docker-compose down && ./scripts/down-detached.sh",
+    "start": "npm run up && docker-compose up -d runesapi",
+    "down": "docker-compose down",
+    "build": "rm -rf .dist && tsc --outDir .build",
     "test": "jest --selectProjects unit",
-    "pretest:integration": "./scripts/up-detached.sh && wait-on tcp:3002",
+    "pretest:integration": "./scripts/up.sh && docker-compose up -d runesapi && wait-on tcp:3002 && wait-on tcp:3000",
     "test:integration": "jest --selectProjects integration --detectOpenHandles",
     "posttest:integration": "npm run down",
     "db:create:entity": "ts-node ./node_modules/.bin/typeorm entity:create -d src/db/entity",
@@ -19,6 +20,7 @@
     "db:generate:migration": "ts-node ./node_modules/.bin/typeorm migration:generate -d src/db/migration",
     "db:run:migration": "ts-node ./node_modules/.bin/typeorm migration:run",
     "db:revert:migration": "ts-node ./node_modules/.bin/typeorm migration:revert",
+    "check": "tsc --noEmit && npm run check:prettier",
     "check:prettier": "prettier \"{.,,{src,test,.vscode}/**/}*.@(ts|js|json|yml|yaml)\" --list-different",
     "fix:prettier": "npm run check:prettier -- --write"
   },
@@ -40,6 +42,7 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "sequelize-cli": "^6.2.0",
+    "serverless": "^2.18.0",
     "serverless-offline": "^6.8.0",
     "serverless-plugin-typescript": "^1.1.9",
     "ts-jest": "^26.4.4",
