--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -33,10 +33,11 @@ jobs:
           export V=$(jq -r .version package.json)
           export V_MAJOR=$(jq -r '.version | split(".")[0]' package.json)
           export V_MINOR=$(jq -r '.version | split(".")[1]' package.json)
+          export V_MAJOR_MINOR=$V_MAJOR.$V_MINOR
           export BRANCH_NAME=${GITHUB_REF#refs/heads/}
           echo "V=$V" >> $GITHUB_ENV
           echo "V_MAJOR=$V_MAJOR" >> $GITHUB_ENV
-          echo "V_MAJOR_MINOR=$V_MAJOR.$V_MINOR" >> $GITHUB_ENV
+          echo "V_MAJOR_MINOR=$V_MAJOR_MINOR" >> $GITHUB_ENV
           echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
           if [ $BRANCH_NAME = "main" ]; then
             echo "::set-output name=tags::$V, $V_MAJOR, $V_MAJOR_MINOR, latest"
@@ -57,12 +58,11 @@ jobs:
 
       - name: Docker build
         if: github.event_name == 'push' && env.BRANCH_NAME == 'main'
-        uses: docker/build-push-action@v1
+        uses: docker/build-push-action@v2
         env:
           DOCKER_BUILDKIT: 1
           BUILDKIT_PROGRESS: plain
         with:
-          repository: ${{ github.event.repository.name }}
           username: ${{ secrets.DH_USER }}
           password: ${{ secrets.DH_PASS }}
           tags: ${{ steps.get_vars.outputs.tags }}
