--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -43,12 +43,6 @@ jobs:
             echo "::set-output name=tags::$V, $V_MAJOR, $V_MAJOR_MINOR, latest"
           fi
 
-      - name: Docker login
-        run: docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
-        env:
-          DOCKER_USER: ${{ secrets.DH_USER }}
-          DOCKER_PASSWORD: ${{ secrets.DH_PASS }}
-
       - name: Install NPM dependencies
         run: npm ci
       - name: Quality checks
@@ -56,16 +50,19 @@ jobs:
       - name: Unit tests
         run: npm test
 
-      - name: Docker build
-        if: github.event_name == 'push' && env.BRANCH_NAME == 'main'
-        uses: docker/build-push-action@v2
-        env:
-          DOCKER_BUILDKIT: 1
-          BUILDKIT_PROGRESS: plain
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
         with:
           username: ${{ secrets.DH_USER }}
           password: ${{ secrets.DH_PASS }}
-          tags: ${{ steps.get_vars.outputs.tags }}
-          build_args: BUILDKIT_INLINE_CACHE=1
-          add_git_labels: true
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          file: ./Dockerfile
           push: true
+          tags: ${{ steps.get_vars.outputs.tags }}
