--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -50,19 +50,13 @@ jobs:
       - name: Unit tests
         run: npm test
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v1
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v1
-      - name: Login to DockerHub
-        uses: docker/login-action@v1
+      - uses: docker/setup-buildx-action@v1
+      - uses: docker/login-action@v1
         with:
           username: ${{ secrets.DH_USER }}
           password: ${{ secrets.DH_PASS }}
-      - name: Build and push
-        uses: docker/build-push-action@v2
+      - uses: docker/build-push-action@v2
         with:
           context: .
-          file: ./Dockerfile
+          tags: runesapi:latest runesapi:${{ env.V }} runesapi:${{ env.V_MAJOR }} runesapi:${{ env.V_MAJOR_MINOR }}
           push: true
-          tags: ${{ steps.get_vars.outputs.tags }}
