--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,8 +10,8 @@ defaults:
     shell: bash
 
 env:
-  INIT_IMAGE: runesapi/runesapi-init
-  API_IMAGE: runesapi/runesapi
+  INIT_IMAGE: 4rbor/runesapi-init
+  API_IMAGE: 4rbor/runesapi
   REPO_NAME: ${{ github.event.repository.name }}
 
 jobs:
@@ -52,17 +52,15 @@ jobs:
       - name: Unit tests
         run: npm test
 
-      - uses: docker/setup-buildx-action@v1
       - uses: docker/login-action@v1
         with:
           username: ${{ secrets.DH_USER }}
           password: ${{ secrets.DH_PASS }}
-      - uses: docker/build-push-action@v2
-        with:
-          context: .
-          tags: |
-            ${{ env.API_IMAGE }}:latest
-            ${{ env.API_IMAGE }}:${{ env.V }}
-            ${{ env.API_IMAGE }}:${{ env.V_MAJOR }}
-            ${{env.API_IMAGE}}:${{env.V_MAJOR_MINOR}}
-          push: true
+      - name: Docker build and publish
+        run: \
+          docker build . -f=Dockerfile \
+          -t ${{ env.API_IMAGE }}:latest \
+          -t ${{ env.API_IMAGE }}:${{ env.V }} \
+          -t ${{ env.API_IMAGE }}:${{ env.V_MAJOR }} \
+          -t ${{ env.API_IMAGE }}:${{ env.V_MAJOR_MINOR }}
+          docker push -a
