--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -41,9 +41,6 @@ jobs:
           echo "V_MAJOR=$V_MAJOR" >> $GITHUB_ENV
           echo "V_MAJOR_MINOR=$V_MAJOR_MINOR" >> $GITHUB_ENV
           echo "BRANCH_NAME=$BRANCH_NAME" >> $GITHUB_ENV
-          if [ $BRANCH_NAME = "main" ]; then
-            echo "::set-output name=tags::$V, $V_MAJOR, $V_MAJOR_MINOR, latest"
-          fi
 
       - name: Install NPM dependencies
         run: npm ci
@@ -52,15 +49,17 @@ jobs:
       - name: Unit tests
         run: npm test
 
-      - uses: docker/login-action@v1
-        with:
-          username: ${{ secrets.DH_USER }}
-          password: ${{ secrets.DH_PASS }}
+      - name: Docker login
+        env:
+          DOCKER_USER: ${{ secrets.DH_USER }}
+          DOCKER_PASSWORD: ${{ secrets.DH_PASS }}
+        run: docker login --username $DOCKER_USER --password $DOCKER_PASSWORD
+
       - name: Docker build and publish
         run: \
           docker build . -f=Dockerfile \
           -t ${{ env.API_IMAGE }}:latest \
           -t ${{ env.API_IMAGE }}:${{ env.V }} \
           -t ${{ env.API_IMAGE }}:${{ env.V_MAJOR }} \
-          -t ${{ env.API_IMAGE }}:${{ env.V_MAJOR_MINOR }}
+          -t ${{ env.API_IMAGE }}:${{ env.V_MAJOR_MINOR }} && \
           docker push -a
